[metadata]
name = movexplo
version = 0.1
description = Display your movies on hard drive
long_description = file: README.md
author = Antoine Hoorelbeke
author_email = ahoorelbeke@gmail.com
url = https://github.com/anth2o/movexplo

[options]
python_requires = >=3.6
package_dir=
    =src
packages = find:
include_package_data=True

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    movexplo = movexplo.writer:_main
