[metadata]
name = movexplo
version = 0.1
description = Display your movies on hard drive
long_description = file: README.md
author = Antoine Hoorelbeke
author_email = ahoorelbeke@gmail.com
url = https://github.com/anth2o/movexplo

[options]
python_requires = >=3.6
package_dir=
    =src
packages = find:
include_package_data = True
install_requires =
    Flask>=1.1.1
    unidecode>=1.1.1
    gunicorn==19.9.0

[options.extras_require]
writer =
    beautifulsoup4>=4.8.1
    requests>=2.22.0
    typer>=0.3.0
tests =
    pytest>=5.4.3
    pytest-cov>=2.10.0
    codecov>=2.1.7

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    movexplo = movexplo.writer:_main
